# methane-forecasting

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
data/: sample_methane.csv
docs/: architecture.mmd
methane_forecasting/: __init__.py  __main__.py  cli.py  data.py  features.py  model.py
notebooks/: methane_forecasting_alim_narmamatov.ipynb
tests/: test_pipeline.py
