[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "methane-forecasting"
version = "1.0.0"
description = "Time-series forecasting pipeline for methane sensor readings"
requires-python = ">=3.11"
authors = [{ name = "Alim Narmamatov" }]
dependencies = [
  "gdown>=5.2,<6.0",
  "joblib>=1.4,<2.0",
  "numpy>=2.0,<3.0",
  "pandas>=2.2,<3.0",
  "scikit-learn>=1.5,<2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8,<9", "ruff>=0.12,<1.0"]
notebook = ["matplotlib>=3.9,<4.0", "jupyter>=1.1,<2.0"]

[project.scripts]
methane-forecast = "methane_forecasting.cli:main"

[tool.setuptools.packages.find]
include = ["methane_forecasting*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
target-version = "py311"
line-length = 110

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
